changed the logo image, fixed the select general health not showing in english page, fixed minor issues

--- a/myapp/static/style.css
+++ b/myapp/static/style.css
@@ -95,7 +95,7 @@ body {
 }
 
 .header * {
-    max-width: 200px;
+    /* max-width: 200px; */
 
 }
 
